force-app/main/default/objects/Leave_Approval_History__c/Leave_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Leave Approval History</label>
    <pluralLabel>Leave Approval Histories</pluralLabel>
    <nameField>
        <label>History Number</label>
        <type>AutoNumber</type>
        <displayFormat>HIST-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>