force-app/main/default/objects/Leave_Approval_History__c/fields/Approval_Mode_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Approval_Mode_Snapshot__c</fullName>
    <label>Approval Mode Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>