force-app/main/default/objects/Leave_Approval_History__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Actions</relationshipLabel>
    <relationshipName>Approval_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>