force-app/main/default/objects/Leave_Approval_History__c/fields/Approver_Target__c.field-meta.xml
<CustomField>
    <fullName>Approver_Target__c</fullName>
    <label>Approver Target</label>
    <length>120</length>
    <type>Text</type>
</CustomField>