force-app/main/default/objects/Leave_Approval_History__c/fields/Leave_Request__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request__c</fullName>
    <label>Leave Request</label>
    <referenceTo>Leave_Request__c</referenceTo>
    <relationshipLabel>Approval Histories</relationshipLabel>
    <relationshipName>Approval_Histories</relationshipName>
    <type>MasterDetail</type>
</CustomField>