force-app/main/default/objects/Leave_Approval_History__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Manager_Approval</fullName>
                <label>Manager Approval</label>
            </value>
            <value>
                <fullName>HR_Approval</fullName>
                <label>HR Approval</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>